add username and pass to locators

--- a/src/test/resources/configfiles/locators.properties
+++ b/src/test/resources/configfiles/locators.properties
@@ -3,3 +3,5 @@ email_field = login_id
 next_button = //button[@id='nextbtn']
 password_field = //input[@id='password']
 login_next_button = //button[@id='nextbtn']//span[contains(text(),'Sign in')]
+zoho_email = johnrickpogi23@gmail.com
+zoho_pass = Testonly1234!
