Add creating a new lead automation

--- a/src/test/resources/configfiles/locators.properties
+++ b/src/test/resources/configfiles/locators.properties
@@ -5,3 +5,10 @@ password_field = //input[@id='password']
 login_next_button = //button[@id='nextbtn']//span[contains(text(),'Sign in')]
 zoho_email = johnrickpogi23@gmail.com
 zoho_pass = Testonly1234!
+calendar = //div[contains(text(),'CRM')]
+lead_button = //lyte-text[normalize-space()='Leads']
+Create_lead_button = //button[@aria-label='Create Lead']
+FirstName = //input[@id='Crm_Leads_FIRSTNAME_LInput']
+LastName = //input[@id='Crm_Leads_LASTNAME_LInput']
+Company = //crm-create-sections[@id='secDiv_Lead_Information']//div[2]//lyte-autocomplete[1]//lyte-dropdown[1]//div[1]//lyte-drop-button[1]//lyte-input[1]//div[1]//input[1]
+lead_save_button = //lyte-button[@id='crm_create_savebutnLeads']//lyte-yield[1]
